2001-05-05  Robert Collins  <robert.collins@itdomain.com.au>

	* automake.in (required_targets): Added uninstall-am.

2001-05-05  Tom Tromey  <tromey@redhat.com>

	Fix bug reported by Robert Boehne:
	* automake.in (output_lex_build_rule): Don't let AMDEP_TRUE be
	substituted.
	(handle_dependencies): Likewise.
	* Makefile.am (maintainer-check): Look for AMDEP_TRUE
	substitution.  Correct diff now has 30 lines.  Look for space
	after losing `undef'.

2001-05-04  Peter Eisentraut  <peter_e@gmx.net>

	* m4/sanity.m4: Remove the temp file before possible error exits.

2001-05-04  Akim Demaille  <akim@epita.fr>

	* configure.in: Set perllibdir.
	From Dave Morrison.

2001-05-04  Ralf Corsepius  <corsepiu@faw.uni-ulm.de>

	* automake.in ($pkgdata_dir): New.
	(&require_file_internal): Use it.

2001-05-03  Akim Demaille  <akim@epita.fr>

	Case insensitive FS choke on Automake/ vs automake.
	Reported by Tim Van Holder.

	* Automake/: Move into...
	* lib/: this new directory.

2001-05-03  Raja R Harinath  <harinath@cs.umn.edu>

	* data.am (install-%DIR%%PRIMARY%): Execute the same command as
	echoed.

2001-04-30  Jim Meyering  <meyering@lucent.com>

	* automake.in: Remove `/lib' from include directory.

2001-04-27  Akim Demaille  <akim@epita.fr>

	AM_INIT_AUTOMAKE is no longer optional.

	* automake.in ($seen_make_set, $seen_prog_install)
	($seen_arg_prog): Remove.
	(&handle_programs, &handle_scripts, &scan_one_autoconf_file):
	Remove related code.

2001-04-27  Akim Demaille  <akim@epita.fr>

	* tests/specflags4.test, tests/specflags5.test: Remove, merged
	into...
	* tests/specflags3.test: here.

2001-04-27  Akim Demaille  <akim@epita.fr>

	* automake.in ($seen_path_xtra): Remove.
	(&handle_compile): Don't handle `AC_PATH_XTRA' AC_SUBST variables.
	(&scan_one_autoconf_file): Do it, instead of setting $seen_path_xtra.

2001-04-27  Akim Demaille  <akim@epita.fr>

	* automake.in (&file_contents_internal): Declare it.

2001-04-27  Akim Demaille  <akim@epita.fr>
