@@ -3084,8 +3084,12 @@ sub handle_dist
 	# to all possible directories, and use it.  If DIST_SUBDIRS is
 	# defined, just use it.
 	my $dist_subdir_name;
-	if (variable_conditionally_defined ('SUBDIRS')
-	    || &variable_defined ('DIST_SUBDIRS'))
+	# Note that we check DIST_SUBDIRS first on purpose.  At least
+	# one project uses so many conditional subdirectories that
+	# calling variable_conditionally_defined on SUBDIRS will cause
+	# automake to grow to 150Mb.  Sigh.
+	if (&variable_defined ('DIST_SUBDIRS')
+	    || variable_conditionally_defined ('SUBDIRS'))
 	{
 	    $dist_subdir_name = 'DIST_SUBDIRS';
 	    if (! &variable_defined ('DIST_SUBDIRS'))
