@@ -1,3 +1,8 @@
+2001-05-05  Richard Boulton  <richard@tartarus.org>
+
+	* automake.in (handle_dist): Check for existence of DIST_SUBDIRS
+	first.
+
 2001-05-05  Robert Collins  <robert.collins@itdomain.com.au>
 
 	* automake.in (required_targets): Added uninstall-am.
